--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
 <div class="main-content">
 {{>header}}
+<p>This site was created by {{name}}. It uses data from <a href="https://mapbox.com">Mapbox</a> and <a href="https://weatherstack.com">Weatherstack</a>!</p>
 <img src="/images/img1.jpg" alt="Me" class="portrait">
 <p class="img-text">Jivin Mazumder's Google Profile Picture</p>
 </div>
