--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -22,6 +22,7 @@
 <p id="message" class="message"></p>
 <p id="message-1">Not your location? Example:</p>
 <p id="message-2">East Brunswick, New Jersey</p>
+{{!-- <p class="message-3"></p> --}}
 
 </div>
 
