--- a/src/views/help.hbs
+++ b/src/views/help.hbs
@@ -9,6 +9,22 @@
 <div class="main-content">
 {{>header}}
 <p>{{message}}</p>
+<hr>
+<p>Not your address? Example:</p>
+<p>{{example}}</p>
+<hr>
+<p>What you can do to get your weather:</p>
+
+<br>
+
+<ul>
+<li>You can {{ex1}}</li>
+<li>You can {{ex2}}</li>
+<li>Or you can {{ex3}}</li>
+</ul>
+
+<br>
+
 <img src="/images/weather.png" alt="">
 <br><br>
 </div>
