--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -20,8 +20,8 @@
 <hr>
 
 <p id="message" class="message"></p>
-<p id="message-1">Not your location? Example:</p>
-<p id="message-2">East Brunswick, New Jersey</p>
+<p id="message-1">Not your location? Go to the <a href="/help">Help page</a> to see the guide</p>
+<p id="message-2"></p>
 {{!-- <p class="message-3"></p> --}}
 
 </div>
